refactor: rename `Actionable` to `Reaction`